--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js",
-    "deploy": "aws s3 sync dist/ s3://autenti.ca"
+    "sync": "aws s3 sync dist/ s3://autenti.ca",
+    "deploy": "npm run build && npm run sync"
+
   },
   "repository": {
     "type": "git",
