--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "build": "node build/build.js",
     "sync": "aws s3 sync dist/ s3://autenti.ca",
     "deploy": "npm run build && npm run sync"
-
   },
   "repository": {
     "type": "git",
@@ -19,7 +18,8 @@
   },
   "dependencies": {
     "bootstrap-vue": "2.0.0-rc.8",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-slider-component": "2.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
