--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bootstrap-vue": "2.0.0-rc.8",
     "vue": "^2.5.2",
+    "vue-color": "2.4.6",
     "vue-slider-component": "2.6.2"
   },
   "devDependencies": {
