--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "bootstrap-vue": "2.0.0-rc.8",
+    "sanitize-html": "1.18.2",
     "vue": "^2.5.2",
     "vue-color": "2.4.6",
     "vue-slider-component": "2.6.2"
