--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-test",
+  "name": "shopify-product-gif",
   "version": "1.0.0",
-  "description": "A Vue.js project",
+  "description": "GIF for your shopify product",
   "author": "Jonathan Morales Vélez <jonathanmv@outlook.com>",
   "private": true,
   "scripts": {
@@ -9,8 +9,8 @@
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js",
-    "sync": "aws s3 sync dist/ s3://autenti.ca",
-    "deploy": "npm run build && npm run sync"
+    "push-pages": "node build/gh-pages-deploy.js",
+    "deploy": "npm run build && npm run push-pages"
   },
   "repository": {
     "type": "git",
@@ -49,6 +49,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "gh-pages": "1.1.0",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
